--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
+    <div class="hero">
 
         <div class="logo"> Header Logo</div>
 
@@ -32,22 +32,22 @@
         <div class="image-row">
             <div class="subsection">
                 <img>
-                <div class="subtext"> thisis some subtext under an illustration or image</div>
+                <div class="subtext small"> thisis some subtext under an illustration or image</div>
             </div>
 
             <div class="subsection">
                 <img>
-                <div class="subtext"> thisis some subtext under an illustration or image</div>
+                <div class="subtext small"> thisis some subtext under an illustration or image</div>
             </div>
 
             <div class="subsection">
                 <img>
-                <div class="subtext"> thisis some subtext under an illustration or image</div>
+                <div class="subtext small"> thisis some subtext under an illustration or image</div>
             </div>
 
             <div class="subsection">
                 <img>
-                <div class="subtext"> thisis some subtext under an illustration or image</div>
+                <div class="subtext small"> thisis some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
@@ -62,6 +62,10 @@
             <div class="big-text">Call to action! It's time!</div>
             <div class="small-text"> Sign up for our product by clicking that button right over there!</div>
             <button class="white">Sign up</button>
+        </div>
+
+        <div class="footer">
+            Copyright Jacques Elia 2025
         </div>
     </div>
     
