feat(css): add google font and fixed styling

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         <div class="image-row">
             <div class="subsection">
                 <img>
-                <div class="subtext small"> thisis some subtext under an illustration or image</div>
+                <div class="subtext"> thisis some subtext under an illustration or image</div>
             </div>
 
             <div class="subsection">
                 <img>
-                <div class="subtext small"> thisis some subtext under an illustration or image</div>
+                <div class="subtext"> thisis some subtext under an illustration or image</div>
             </div>
 
             <div class="subsection">
                 <img>
-                <div class="subtext small"> thisis some subtext under an illustration or image</div>
+                <div class="subtext"> thisis some subtext under an illustration or image</div>
             </div>
 
             <div class="subsection">
                 <img>
-                <div class="subtext small"> thisis some subtext under an illustration or image</div>
+                <div class="subtext"> thisis some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
